# agent-sdk-rs

./: AGENTS.md  Cargo.toml  README.md
docs/: IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PROVIDER_ENHANCEMENT_PLAN.md  PROVIDER_FEATURES.md  event-system.md  parameter-validation.md  tool-calling-design.md  tool-design.md
examples/: anthropic_basic.rs  approval_workflow.rs  basic.rs  calculator.rs  debug_calculator.rs  direct_validation.rs  event_driven.rs  event_monitoring.rs  hook_system.rs  multi_agent.rs  multi_tool.rs  provider_features.rs  scheduler.rs  simple_events.rs  test_parser.rs  validation_test.rs
src/: agent.rs  agent_pool.rs  approval.rs  context.rs  error.rs  event.rs  events.rs  hooks.rs  lib.rs  main.rs  memory.rs  message.rs  room.rs  runtime.rs  scheduler.rs  tool.rs
src/agent/: agent.rs  mod.rs  options.rs
src/llm/: mod.rs  openai.rs
src/provider/: anthropic.rs  batch.rs  cache.rs  client.rs  context.rs  embeddings.rs  middleware.rs  mod.rs  open_router.rs  rate_limit.rs  retry.rs  timeout.rs
src/tool/: executor.rs  mod.rs  parser.rs  registry.rs
