[package]
name = "agent-sdk"
version = "0.1.0"
edition = "2021"
description = "A Rust SDK for building AI agents"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
async-trait = "0.1"
