[package]
description = "A Rust SDK for building AI agents"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "agent-sdk"
version = "0.1.0"

[dependencies]
reqwest = { version = "0.12.28", features = ["json", "stream"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3"
