[package]
description = "A Rust SDK for building AI agents"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "agent-sdk"
version = "0.1.0"

[[example]]
name = "calculator"
path = "examples/calculator.rs"

[[example]]
name = "test_parser"
path = "examples/test_parser.rs"

[[example]]
name = "debug_calculator"
path = "examples/debug_calculator.rs"

[[example]]
name = "multi_tool"
path = "examples/multi_tool.rs"

[[example]]
name = "validation_test"
path = "examples/validation_test.rs"

[[example]]
name = "direct_validation"
path = "examples/direct_validation.rs"

[[example]]
name = "event_monitoring"
path = "examples/event_monitoring.rs"

[[example]]
name = "hook_system"
path = "examples/hook_system.rs"

[[example]]
name = "simple_events"
path = "examples/simple_events.rs"

[[example]]
name = "anthropic_basic"
path = "examples/anthropic_basic.rs"

[dependencies]
reqwest = { version = "0.12.28", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"
